# OpenMusicTrainer

./: .gitignore  CMakeLists.txt  main.c  main.cpp
